package com.example.expensetracker;

import android.view.View;
import android.widget.TextView;

import androidx.recyclerview.widget.RecyclerView;

public class ExpenseViewHolder  {
    public TextView nameView;
    public TextView priceView;
    public TextView currencyView;
    public TextView locationView;
    public TextView categoryView;
    public TextView dateView;
    public TextView notesView;


}