@startuml

title __EXPENSETRACKER.APP's Class Diagram__\n

  namespace com.example.expensetracker {
    class com.example.expensetracker.BuildConfig {
    }
  }
  

  namespace com.example.expensetracker {
    class com.example.expensetracker.CsvHandler {
    }
  }
  

  namespace com.example.expensetracker {
    class com.example.expensetracker.DataAnalysis {
    }
  }
  

  namespace com.example.expensetracker {
    class com.example.expensetracker.Expense {
    }
  }
  

  namespace com.example.expensetracker {
    class com.example.expensetracker.ExpenseSheet {
    }
  }
  

  namespace com.example.expensetracker {
    class com.example.expensetracker.ExpenseViewHolder {
    }
  }
  

  namespace com.example.expensetracker {
    class com.example.expensetracker.ExpensesAdapter {
    }
  }
  

  namespace com.example.expensetracker {
    class com.example.expensetracker.MainActivity {
    }
  }
  

  namespace com.example.expensetracker {
    class com.example.expensetracker.Operation {
    }
  }
  

  namespace com.example.expensetracker {
    class com.example.expensetracker.OperationsStack {
    }
  }
  

  namespace com.example.expensetracker {
    class com.example.expensetracker.Range {
    }
  }
  

  com.example.expensetracker.Expense .up.|> java.lang.Comparable
  com.example.expensetracker.Expense o-- com.example.expensetracker.Range : priceRange
  com.example.expensetracker.ExpensesAdapter -up-|> android.widget.BaseAdapter
  com.example.expensetracker.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.expensetracker.MainActivity o-- com.example.expensetracker.ExpensesAdapter : adapter
  com.example.expensetracker.MainActivity o-- com.example.expensetracker.OperationsStack : currentOperationStack
  com.example.expensetracker.Operation o-- com.example.expensetracker.Expense : operationExpense


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
